fix button text overflow on phones

--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -207,6 +207,12 @@ main > p
     margin: 0.5em
     float: right
 
+.member-tag
+  display: none !important
+
+
+//--------------------------------------
+
 .project-card
   width: 40%
   background-color: $block-color
@@ -285,3 +291,7 @@ main > p
 @media screen and (max-width: 850px)
   .project-card, .member
     width: 100%
+
+  .nav-button
+    font-size: 0.8em
+
